Adicionando primefaces e menu no CRUD

--- a/pos-java-maven-hibernate/src/main/webapp/index2.xhtml
+++ b/pos-java-maven-hibernate/src/main/webapp/index2.xhtml
@@ -17,41 +17,40 @@
 <p:menuitem value="Página PrimeFaces" action="index2.jsf"/>
 </p:breadCrumb>
 </h:form>
-
 <h:form >
 <h:messages showDetail="true" showSummary="false"></h:messages>
-<h:panelGrid columns="2">
+<p:panelGrid columns="2">
 
 <h:outputLabel>Id: </h:outputLabel>
-<h:inputText readonly="true" value="#{usuarioPessoaManagedBean.usuarioPessoa.id}"></h:inputText>
+<p:inputText readonly="true" value="#{usuarioPessoaManagedBean.usuarioPessoa.id}"></p:inputText>
 
 <h:outputLabel>Nome: </h:outputLabel>
-<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" required="true" requiredMessage="Informe o nome!"></h:inputText>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" required="true" requiredMessage="Informe o nome!"></p:inputText>
 
 <h:outputLabel>Sobrenome: </h:outputLabel>
-<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.sobrenome}" required="true" requiredMessage="Informe o sobrenome!" ></h:inputText>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.sobrenome}" required="true" requiredMessage="Informe o sobrenome!" ></p:inputText>
 
 <h:outputLabel>Email: </h:outputLabel>
-<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.email}"></h:inputText>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.email}"></p:inputText>
 
 <h:outputLabel>Idade: </h:outputLabel>
-<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}"></h:inputText>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}"></p:inputText>
 
 <h:outputLabel>Login: </h:outputLabel>
-<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.login}"></h:inputText>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.login}"></p:inputText>
 
 <h:outputLabel>Senha: </h:outputLabel>
-<h:inputSecret value="#{usuarioPessoaManagedBean.usuarioPessoa.senha}"></h:inputSecret>
+<p:password value="#{usuarioPessoaManagedBean.usuarioPessoa.senha}"></p:password>
 
-</h:panelGrid>
+</p:panelGrid>
 <br/>
 <br/>
-<h:commandButton value="Salvar" action="#{usuarioPessoaManagedBean.salvar}"/>
-<h:commandButton value="Novo" action="#{usuarioPessoaManagedBean.novo}"/>
-<h:commandButton value="Deletar" action="#{usuarioPessoaManagedBean.remover}"/>
+<p:commandButton value="Salvar" action="#{usuarioPessoaManagedBean.salvar}" />
+<p:commandButton value="Novo" action="#{usuarioPessoaManagedBean.novo}"/>
+<p:commandButton value="Deletar" action="#{usuarioPessoaManagedBean.remover}"/>
 <br/>
 <br/>
-<h:dataTable value="#{usuarioPessoaManagedBean.list}" var="user" cellpadding="15" border="1">
+<p:dataTable value="#{usuarioPessoaManagedBean.list}" var="user" cellpadding="15" border="1">
 <f:facet name="header">Lista de usuários</f:facet>
 <h:column>
 <f:facet name="header">Id</f:facet>
@@ -92,7 +91,7 @@
 <f:setPropertyActionListener value="#{user}" target="#{usuarioPessoaManagedBean.usuarioPessoa}"></f:setPropertyActionListener>
 </h:commandLink>
 </h:column>
-</h:dataTable>
+</p:dataTable>
 </h:form>
 
 </h:body>
