Passando parametros do telefone para outra página com ManagedBean

--- a/pos-java-maven-hibernate/src/main/webapp/index.xhtml
+++ b/pos-java-maven-hibernate/src/main/webapp/index.xhtml
@@ -105,6 +105,14 @@
 <f:ajax execute="botaoremover" render="@form :formulario:msg "/>
 </h:commandLink>
 </h:column>
+
+<h:column>
+<f:facet name="header">Telefones</f:facet>
+<h:commandLink  immediate="true" action="telefone.jsf" id="botaofone">
+<h:graphicImage url="resources/img/fone.png"/>
+<f:param name="codigouser" value="#{user.id}"/>
+</h:commandLink>
+</h:column>
 </h:dataTable>
 </h:form>
 
