--- a/pos-java-maven-hibernate/src/main/webapp/telefone.xhtml
+++ b/pos-java-maven-hibernate/src/main/webapp/telefone.xhtml
@@ -21,8 +21,21 @@
 <h:form id="formulario">
 <h:messages showDetail="true" showSummary="false" id="msg"></h:messages>
 
-<h1> Telefones </h1>
+<h:panelGrid columns="2">
+<h:outputLabel>Usuário: </h:outputLabel>
 <h:outputText value="#{telefoneManagedBean.user.nome}"/>
+
+<h:outputLabel>Número: </h:outputLabel>
+<h:inputText value="#{telefoneManagedBean.telefone.numero}"></h:inputText>
+
+<h:outputLabel>Tipo: </h:outputLabel>
+<h:inputText value="#{telefoneManagedBean.telefone.tipo}"></h:inputText>
+
+</h:panelGrid>
+<br/>
+<br/>
+<h:commandButton value="Salvar" action="#{telefoneManagedBean.salvar}"></h:commandButton>
+
 
 </h:form>
 
