placeholder com primefaces

--- a/pos-java-maven-hibernate/src/main/webapp/index.xhtml
+++ b/pos-java-maven-hibernate/src/main/webapp/index.xhtml
@@ -38,6 +38,9 @@
 <h:outputLabel>Idade: </h:outputLabel>
 <h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}"></h:inputText>
 
+<h:outputLabel>Salário: </h:outputLabel>
+<h:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.salario}"></h:inputText>
+
 <h:outputLabel>Sexo: </h:outputLabel>
 <h:selectOneMenu value="#{usuarioPessoaManagedBean.usuarioPessoa.sexo}">
 <f:selectItem itemValue="MASCULINO" />
