--- a/pos-java-maven-hibernate/src/main/webapp/index2.xhtml
+++ b/pos-java-maven-hibernate/src/main/webapp/index2.xhtml
@@ -30,7 +30,9 @@
 
 
 <h:outputLabel>Nome: </h:outputLabel>
-<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" ></p:inputText>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.nome}" id="idnomepessoa" >
+<p:watermark value="Informe o nome da Pessoa" for="idnomepessoa"></p:watermark>
+</p:inputText>
 
 
 <h:outputLabel>Sobrenome: </h:outputLabel>
@@ -44,11 +46,41 @@
 <h:outputLabel>Idade: </h:outputLabel>
 <p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.idade}"></p:inputText>
 
+<h:outputLabel>Salário: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.salario}"></p:inputText>
+
 <h:outputLabel>Sexo: </h:outputLabel>
 <p:selectOneMenu value="#{usuarioPessoaManagedBean.usuarioPessoa.sexo}">
 <f:selectItem itemValue="MASCULINO" itemLabel="MASCULINO"/>
 <f:selectItem  itemValue="FEMININO" itemLabel="FEMININO"/>
 </p:selectOneMenu>
+
+<h:outputLabel>Cep: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.cep}">
+<f:ajax event="blur" execute="@this" listener="#{usuarioPessoaManagedBean.pesquisaCep}" render="logradouro complemento bairro localidade uf ibge gia"/>
+</p:inputText>
+
+<h:outputLabel>Logradouro: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.logradouro}" id="logradouro"></p:inputText>
+
+<h:outputLabel>Complemento: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.complemento}" id="complemento"></p:inputText>
+
+<h:outputLabel>Bairro: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.bairro}" id="bairro"></p:inputText>
+
+<h:outputLabel>Localidade: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.localidade}" id="localidade"></p:inputText>
+
+<h:outputLabel>Uf: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.uf}" id="uf"></p:inputText>
+
+
+<h:outputLabel>Ibge: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.ibge}" id="ibge"></p:inputText>
+
+<h:outputLabel>Gia: </h:outputLabel>
+<p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.gia}" id="gia"></p:inputText>
 
 <h:outputLabel>Login: </h:outputLabel>
 <p:inputText value="#{usuarioPessoaManagedBean.usuarioPessoa.login}"></p:inputText>
